java: Set release version to 17 (#352)
* java: Set release version to 17

  * Set default release version to 17
  * Enable Error prone with Nullaway
  * Enable Checkstyle

* java: Copy lists efficiently 

* java: Use Integers in addition to Longs

Currently, messages are a bit cumbersome to use in combination with
Java. The generated code currently uses long values where Java would
use integers. This leads to some silly code:

```java
lines.add((int) (long) location.getLine());
```

Unfortunately, long values are needed for the timestamp and duration. So
simply replacing longs with integers wouldn't work.

By specifying some upper bounds the code generation can make a more
informed choice about the size of number to use. The choice for 2^31 - 1
is somewhat arbitrary but matches the maximum length of strings in Java
and .Net. In practice, I would expect Gherkin documents to have a much
more reasonable length though.