@@ -1,6 +1,7 @@
 package io.cucumber.messages;
 
 import io.cucumber.messages.types.Envelope;
+import org.jspecify.annotations.Nullable;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -44,8 +45,8 @@ public final class NdjsonToMessageIterable implements Iterable<Envelope>, AutoCl
 
     @Override
     public Iterator<Envelope> iterator() {
-        return new Iterator<Envelope>() {
-            private Envelope next;
+        return new Iterator<>() {
+            private @Nullable Envelope next;
 
             @Override
             public boolean hasNext() {
@@ -53,13 +54,13 @@ public final class NdjsonToMessageIterable implements Iterable<Envelope>, AutoCl
                     String line = reader.readLine();
                     if (line == null)
                         return false;
-                    if (line.trim().equals("")) {
+                    if (line.trim().isEmpty()) {
                         return hasNext();
                     }
                     try {
                         next = deserializer.readValue(line);
                     } catch (IOException e) {
-                        throw new RuntimeException(String.format("Could not parse JSON: %s", line), e);
+                        throw new RuntimeException("Could not parse JSON: %s".formatted(line), e);
                     }
                     return true;
                 } catch (IOException e) {
